Changed Button Color, FIxed HTML spacing,

--- a/style.css
+++ b/style.css
@@ -3,6 +3,22 @@ body {
     color: #333;
 }
 
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+
+.container {
+    min-height: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
+}
+
 
 header {
     background-color: #2c3e50;
@@ -28,8 +44,8 @@ header {
 
 
 .customBtn {
-    background-color: #28a745;
-    border-color: #28a745;
+    background-color: #2c3e50;
+    border-color: white;
     color: white;
     font-style: bold;
     font-family: "Salsa", cursive;
@@ -43,14 +59,14 @@ header {
 
 
 .customBtn:hover {
-    background-color: #218838;
-    border-color: #1e7e34;
+    background-color: #131c24;
+    border-color: white;
 }
 
 
 .customBtn:link {
-    background-color: #28a745;
-    border-color: #28a745;
+    background-color: #131c24;
+    border-color: white;
 }
 
 
